--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "next": "^13.0.4",
     "next-auth": "^4.18.3",
     "nookies": "^2.5.2",
+    "pg": "^8.8.0",
+    "pg-connection-string": "^2.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.5",
+    "strapi-provider-upload-aws-s3": "^3.6.11",
     "styled-components": "^5.3.6",
     "url-join": "^5.0.0"
   }
